Put pointer test around smprintf to prevent crash for invalid IMG links. b=40094,r=adamlock,approved valeski